--- a/src/styles/_ladder.scss
+++ b/src/styles/_ladder.scss
@@ -120,7 +120,7 @@
             }
 
             td {
-
+                border-right: 1px solid rgba(200,200,200,0.5);
                 min-width: 100px;
 
                 &:first-of-type {
