--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,6 +1,7 @@
 body {
     font-family: 'Oxygen', sans-serif;
     font-size: 1rem;
+    color: $font-color;
     background: $blue;
     .container {
         background: #fff;
