--- a/src/styles/_ladder.scss
+++ b/src/styles/_ladder.scss
@@ -9,9 +9,11 @@
 
         tr {
             background: $off-white;
+
             td:nth-child(3) {
                 background: lighten($off-white, 5%);
             }
+
             // &.Storm {
             //     background: rgb(15, 39, 82);
             //     background: linear-gradient(135deg, rgba(15, 39, 82, 0.8) 0%, rgba(15, 39, 82, 0.8) 50%, rgba(99, 35, 144, 0.8) 50%, rgba(99, 35, 144, 0.8) 100%);
@@ -120,7 +122,7 @@
             }
 
             td {
-                border-right: 1px solid rgba(200,200,200,0.5);
+                border-right: 1px solid rgba(200, 200, 200, 0.5);
                 min-width: 100px;
 
                 &:first-of-type {
@@ -134,7 +136,6 @@
                 &:nth-child(2) {
                     text-align: left;
                 }
-
             }
 
             &:nth-child(2n+1) {
@@ -158,6 +159,39 @@
 
             &:nth-child(9) {
                 border-bottom: 2px solid #000;
+            }
+            &:hover {
+                cursor: pointer;
+                background: lighten($blue, 30%) !important;
+                color: $font-color !important;
+                th {
+                    background: $blue;
+                }
+                td {
+                    color: $font-color !important;
+                }
+                td:nth-child(3) {
+                    background: lighten($blue, 30%);
+                }
+            }
+        }
+    }
+
+    &.show-team-percentages {
+        td {
+            color: #999;
+
+            &.rank-percentage {
+                background: lighten($blue, 30%) !important;
+                color: $font-color;
+                border-bottom: 1px solid rgba(200, 200, 200, 0.5);
+            }
+        }
+
+        .active-team {
+            td:nth-child(-n+2) {
+                background: lighten($blue, 30%);
+                color: $font-color;
             }
         }
     }
