--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 // @import url('https://fonts.googleapis.com/css?family=Oxygen&display=swap');
 // @import url('https://fonts.googleapis.com/css?family=Cutive+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Exo+2&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
 
 @import './_mixins.scss';
 @import './_variables.scss';
